--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -20,18 +20,22 @@ body {
   width: 80%;
   margin: 0 auto;
 }
-
-.homePage img {
-  width: 300px;
-  height: 300px;
-  padding: 20px;
+.homeProduct div img {
+  max-width: 100%;
+  max-height: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .productContainer {
   width: 300px;
   height: 500px;
-  margin: 20px 0;
+  margin: 20px 5px;
   background-color: white;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .productContainer:hover {
@@ -40,4 +44,49 @@ body {
 
 .productContainer div {
   padding: 20px;
+}
+
+.productContainer img {
+  margin-bottom: 20px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.ProductOverview {
+  line-height: 2rem;
+  display: flex;
+  flex-direction: column;
+
+  height: 100%;
+}
+
+.ProductOverview div {
+  padding: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ProductOverview div p {
+  padding: 0 10px;
+}
+
+.link {
+  text-decoration: none;
+  color: black;
+  width: 90%;
+}
+
+.ProductName {
+  max-width: 90%;
+  white-space: nowrap;
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ProductImg {
+  width: 250px;
+  height: 275px;
 }
