--- a/client/src/styles/ViewProduct.css
+++ b/client/src/styles/ViewProduct.css
@@ -41,9 +41,10 @@
   text-align: center;
   justify-content: center;
   width: fit-content;
-  margin: 10px 0;
+  margin: 5px 0;
   padding: 5px 10px;
   border-radius: 50px;
+  font-size: 0.8em;
 }
 
 .BrandCate {
