--- a/client/src/styles/Register.css
+++ b/client/src/styles/Register.css
@@ -18,17 +18,13 @@ body {
   width: 80%;
   margin: 10px auto;
   border: none;
-  border-radius: 2px;
+  border-radius: 5px;
   height: 35px;
   font-size: 20px;
 }
 
 .registerForm input:focus {
   outline: none;
-}
-
-.registerForm section input {
-  width: 20%;
 }
 
 .registerForm label {
@@ -49,8 +45,8 @@ body {
 .formDiv {
   width: 100%;
   display: flex;
+  flex-direction: row-reverse;
   justify-content: space-between;
-  align-items: center;
 }
 
 .formDiv label {
@@ -61,7 +57,7 @@ body {
 
 .formDiv input {
   margin: 10px 0;
-  width: stretch;
+  width: 45%;
 }
 
 .registerBtn {
@@ -71,11 +67,8 @@ body {
   border: none;
   cursor: pointer;
   background-color: #716f6f;
+  border-radius: 5px;
 
   font-size: 1.5rem;
   color: white;
-}
-
-.register label::after {
-  content: '*';
 }
