--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
-  position: fixed;
+  /* position: fixed; */
 }
 
 .navBar ul li {
