--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -31,10 +31,15 @@
   width: 40%;
   height: 30px;
   font-size: 20px;
+  border: none;
+  border-radius: 10px;
+  padding: 0 0 0 20px;
 }
 
 .searchBar button {
   height: 33px;
   padding: 0 20px;
   margin: 0 0 0 20px;
+  border: none;
+  border-radius: 10px;
 }
