fix register form issue

--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -69,8 +69,6 @@
   justify-content: space-between;
   /* margin: 0 5px; */
 }
-.product img {
-}
 
 .controlBtn {
   position: relative;
@@ -87,4 +85,8 @@
   border-radius: 10px;
   cursor: pointer;
   height: 30px;
+}
+
+.profileNav a {
+  cursor: pointer;
 }
