--- a/client/src/styles/Register.css
+++ b/client/src/styles/Register.css
@@ -45,7 +45,7 @@ body {
 .formDiv {
   width: 100%;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: space-between;
 }
 
