--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -20,16 +20,10 @@ body {
   width: 80%;
   margin: 0 auto;
 }
-.homeProduct div img {
-  max-width: 100%;
-  max-height: 100%;
-  justify-content: center;
-  align-items: center;
-}
 
 .productContainer {
-  width: 300px;
-  height: 500px;
+  width: 200px;
+  height: 300px;
   margin: 20px 5px;
   background-color: white;
 
@@ -42,14 +36,9 @@ body {
   border: 1px solid #aaaaaa;
 }
 
-.productContainer div {
-  padding: 20px;
-}
-
-.productContainer img {
-  margin-bottom: 20px;
-  max-width: 100%;
-  max-height: 100%;
+.link {
+  text-decoration: none;
+  color: black;
 }
 
 .ProductOverview {
@@ -57,25 +46,39 @@ body {
   display: flex;
   flex-direction: column;
 
-  height: 100%;
+  width: 200px;
+  height: 300px;
+
+  justify-content: space-evenly;
+  /* align-items: center; */
 }
+
+.ProductOverview div img {
+  max-width: 100px;
+  max-height: 140px;
+  margin: 0 auto;
+}
+
+/* .ProductImg {
+  margin-bottom: 20px;
+  width: 50%;
+  height: 50%;
+  background-color: black;
+} */
 
 .ProductOverview div {
   padding: 0;
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+}
+
+.ProductOverview div h3 {
+  margin: 0 auto;
 }
 
 .ProductOverview div p {
   padding: 0 10px;
-}
-
-.link {
-  text-decoration: none;
-  color: black;
-  width: 90%;
+  margin: 0 auto;
 }
 
 .ProductName {
@@ -86,7 +89,7 @@ body {
   text-overflow: ellipsis;
 }
 
-.ProductImg {
+/* .ProductImg {
   width: 250px;
   height: 275px;
-}
+} */
