--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Lora', serif;
 }
 
 /*********************************/
@@ -19,6 +22,11 @@
 .navBar ul li {
   padding: 0 30px;
   margin: 10px 0;
+}
+
+.navBar a {
+  text-decoration: none;
+  color: black;
 }
 
 /*********************************/
