--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -9,6 +9,7 @@
 /***************NavBar******************/
 /*********************************/
 .navBar {
+  margin: 10px 0 0;
 }
 
 .navBar ul {
@@ -29,6 +30,11 @@
   color: black;
 }
 
+.navBar a:hover {
+  border: 1px solid #aaaaaa;
+  border-radius: 50px;
+}
+
 /*********************************/
 /***************SearchBar******************/
 /*********************************/
@@ -42,6 +48,7 @@
   border: none;
   border-radius: 10px;
   padding: 0 0 0 20px;
+  outline: none;
 }
 
 .searchBar button {
@@ -50,4 +57,9 @@
   margin: 0 0 0 20px;
   border: none;
   border-radius: 10px;
+  cursor: pointer;
+}
+
+.searchBar button:hover {
+  background-color: white;
 }
