--- a/client/src/styles/AddCategory.css
+++ b/client/src/styles/AddCategory.css
@@ -2,7 +2,7 @@
   width: 60%;
   margin: 50px auto;
   padding: 30px 0;
-  background-color: #bbbbbb;
+  background-color: white;
 }
 
 .CategoryForm {
@@ -14,7 +14,7 @@
   width: 80%;
   margin: 10px auto;
   border: none;
-  border-radius: 5px;
+  border-bottom: 1px solid black;
   height: 35px;
   font-size: 20px;
 }
