--- a/client/src/styles/Register.css
+++ b/client/src/styles/Register.css
@@ -6,7 +6,7 @@ body {
   width: 60%;
   margin: 50px auto;
   padding: 30px 0;
-  background-color: #bbbbbb;
+  background-color: white;
 }
 
 .registerForm {
@@ -18,9 +18,9 @@ body {
   width: 80%;
   margin: 10px auto;
   border: none;
-  border-radius: 5px;
   height: 35px;
   font-size: 20px;
+  border-bottom: 1px solid black;
 }
 
 .registerForm input:focus {
